# PathPilot

./: .gitignore  README.md  build.bat  pyproject.toml  requirements.txt
config/: default_config.json
docs/: PathPilot原始设计方案.md  PathPilot整体技术栈方案.md  v1.0.0.md  功能规划清单.md  开发交接文档.md  开发会话上下文.md  开发路线-路径分组显示.md  无感历史捕获引擎Python实现方案.md  无感历史捕获引擎实现方案.md  无感历史捕获引擎细化方案.md  模块化实现方案.md
src/: __init__.py  app.py  main.py
src/config/: __init__.py  config_manager.py
src/core/: __init__.py  importance_calc.py  path_dedup.py  path_engine.py  path_filter.py  window_monitor.py
src/database/: __init__.py  db_manager.py  models.py
src/gui/: __init__.py  floating_ball.py  icons.py  main_window.py  settings_page.py  time_view.py  tray_icon.py  tree_view.py  welcome_wizard.py
src/utils/: __init__.py  autostart.py  export.py  logger.py  path_utils.py
tests/: __init__.py
tests/test_config/: __init__.py  test_config_manager.py
tests/test_core/: __init__.py  test_importance_calc.py  test_path_dedup.py  test_path_filter.py
tests/test_database/: __init__.py  test_db_manager.py
tests/test_gui/: __init__.py  test_gui_components.py
tests/test_integration/: test_integration.py
tests/test_utils/: test_logger.py  test_path_utils.py
